fixed logstash config field mapping, added timestamp modifications, made elastic stack local host-only

--- a/config/logstash/logstash.conf
+++ b/config/logstash/logstash.conf
@@ -29,6 +29,30 @@ input {
     codec => json
     start_position => "beginning"
   }
+  file {
+    path => "/usr/share/logstash/logs/dpd.log"
+    type => "bro_conn"
+    codec => json
+    start_position => "beginning"
+  }
+  file {
+    path => "/usr/share/logstash/logs/weird.log"
+    type => "bro_files"
+    codec => json
+    start_position => "beginning"
+  }
+  file {
+    path => "/usr/share/logstash/logs/x509.log"
+    type => "bro_http"
+    codec => json
+    start_position => "beginning"
+  }
+  file {
+    path => "/usr/share/logstash/logs/pe.log"
+    type => "bro_ssl"
+    codec => json
+    start_position => "beginning"
+  }
 
 }
 
