--- a/config/logstash/logstash.conf
+++ b/config/logstash/logstash.conf
@@ -31,25 +31,25 @@ input {
   }
   file {
     path => "/usr/share/logstash/logs/dpd.log"
-    type => "bro_conn"
+    type => "bro_dpd"
     codec => json
     start_position => "beginning"
   }
   file {
     path => "/usr/share/logstash/logs/weird.log"
-    type => "bro_files"
+    type => "bro_weird"
     codec => json
     start_position => "beginning"
   }
   file {
     path => "/usr/share/logstash/logs/x509.log"
-    type => "bro_http"
+    type => "bro_x509"
     codec => json
     start_position => "beginning"
   }
   file {
     path => "/usr/share/logstash/logs/pe.log"
-    type => "bro_ssl"
+    type => "bro_pe"
     codec => json
     start_position => "beginning"
   }
